--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Leon Template one</title>
     <!--  main Template CSS file -->
-    <link rel="stylesheet" type="text/css" href="css/leon.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/leon.css"/>
     <!--  Render all Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css"/>
     <!--  Font Awesome library -->
