--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!--  main Template CSS file -->
     <link rel="stylesheet" type="text/css" href="CSS/leon.css"/>
     <!--  Render all Elements Normally -->
-    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <!--  Font Awesome library -->
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/all.min.css" />
     <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
